update links start adding alt text

--- a/layouts/shortcodes/swl_inline_form.html
+++ b/layouts/shortcodes/swl_inline_form.html
@@ -828,14 +828,16 @@
         <form class="ff-61d36628a247a7a541995a11__form" action="https://form.flodesk.com/forms/61d36628a247a7a541995a11/submit" method="post" data-ff-el="form">
           <div class="ff-61d36628a247a7a541995a11__title">
             <div>
-              <div style="text-align:center;" data-paragraph="true">Sign up for</div>
+              <div style="text-align:center;" data-paragraph="true">Discount?</div>
             </div>
           </div>
           <div class="ff-61d36628a247a7a541995a11__subtitle">
             <div>
-              <div data-paragraph="true">- a Science Writing Lab registration link, </div>
-              <div data-paragraph="true">- tips on getting funds for writing services, &</div>
-              <div data-paragraph="true">- a discount to use toward your first writing lab. </div>
+            	<div data-paragraph="true">Sign up here for: </div>
+              <div data-paragraph="true">- a Science Writing Lab registration link,</div>
+              <div data-paragraph="true">- a discount on your first writing lab, & </div>
+              <div data-paragraph="true">- tips on getting funds for writing services</div>
+              <div data-paragraph="true">delivered to your inbox! </div>
             </div>
           </div>
           <div class="ff-61d36628a247a7a541995a11__content fd-form-content" data-ff-el="content">
